roles/k8s_gitea/files/gitea_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitea
  namespace: gitea-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
spec:
  rules:
  - host: gitea.hitesh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
  ingressClassName: nginx
